# Cheat-Sheet-Generator

./: .gitignore  TODO.md
cheatsheet_ai_proj/: .gitignore  README.md  TODO.md  model_diagram.drawio  test.py
cheatsheet_ai_proj/cheatsheet_ai/: compile_data.py  eval.py  generate_dataset.py  main.py  models.py  train.py  visualise_noise.py
cheatsheet_ai_proj/prototypes/: modified_bert.ipynb  test.ipynb
cheatsheet_downloader_proj/: README.md
cheatsheet_downloader_proj/cheatsheet_downloader/: main.py
code2drawio_proj/: README.md  pyproject.toml  test.py
code2drawio_proj/code2drawio/: dom_parser.py  drawio.py  main.py  token_parser.py  tokenizer.py
image_cropper_proj/: README.md  pyproject.toml
image_cropper_proj/image_cropper/: image_cropper.py  main.py
render_code_in_temp_proj/render_code_in_temp/: README.md  insert_image.py  main.py
