[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
dependencies = ["n2g >= 0.3.3"]
name = "code2drawio"
version = "0.0.2"
description = "This program converts a code written in markdown like sections into a draw.io file."
readme = 'README.md'
requires-python = '>= 3.10'

#[project.urls]
# "Homepage"= ""

# [project.optional-dependencies]
# tests = ["SQLAlchemy >= 1.4.40"]